<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nickelhiem</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_validate_login">ValidateLoginActivity</string>
    <string name="title_activity_login_success">LoginSuccessActivity</string>
    <string name="login_success">Login Success</string>

</resources>
