<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
         <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register"
            android:layout_marginTop="25dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <EditText
            android:id="@+id/register_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:hint="@string/username" >
    
            <requestFocus />
        </EditText>
    
        <EditText
            android:id="@+id/register_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    
        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
        
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:text="@string/register" />
    
    </LinearLayout>
</ScrollView>